# lib_ucs_cpp

./: LICENSE  README.md  meson.build  meson_options.txt  test.sh
docs/attributetable/: attributetable.txt
docs/charts/: contextHandler.txt  evaluator.txt  evaluators.txt  pipinteraction.txt  sessionManager.txt  tryAccess.txt  tryAccessMsgBus.txt
docs/contexthandler/: contexthandler.txt
docs/obligationmanager/: omClasses.txt
docs/pap/: papClasses.txt  papClasses1.txt
docs/pdp/: policy.dia
docs/pep/: pepClasses.txt
docs/pip/: pipClasses.txt
docs/sessionmanager/: sessionmanager.txt
include/: meson.build
include/ucs/attributetable/: AttributeHeader.hpp  AttributeManager.hpp  AttributeRecord.hpp  AttributeStorage.hpp
include/ucs/contexthandler/: ContextHandler.hpp
include/ucs/core/: Component.hpp  DummyComponent.hpp
include/ucs/data/: Document.hpp  EvaluationResult.hpp  Policy.hpp  Request.hpp  ResultType.hpp
include/ucs/data/policy/: Expression.hpp  Instruction.hpp  Result.hpp  Rule.hpp
include/ucs/message/: AttributeChangedMessage.hpp  EndAccessMessage.hpp  Message.hpp  ResponseMessage.hpp  StartAccessMessage.hpp  TryAccessMessage.hpp
include/ucs/pap/: PolicyAdministrationPoint.hpp  PolicySearchParams.hpp  Storage.hpp
include/ucs/pdp/: PolicyDecisionPoint.hpp
include/ucs/pep/: PolicyEnforcementPoint.hpp
include/ucs/pip/: PolicyInformationPoint.hpp  PolicyInformationPointInfo.hpp  PolicyInformationPointValue.hpp
include/ucs/sessionmanager/: Session.hpp  SessionInfo.hpp  SessionManager.hpp  SessionQuery.hpp  SessionStorage.hpp
include/ucs/utility/: log.hpp  utility.hpp  uuid.hpp
scripts/: version.sh
src/: meson.build
src/ucs/: DummyComponent.cpp
src/ucs/data/: EvaluationResult.cpp
src/ucs/data/policy/: Expression.cpp  Instruction.cpp  Rule.cpp
src/ucs/message/: AttributeChangedMessage.cpp  EndAccessMessage.cpp  Message.cpp  ResponseMessage.cpp  StartAccessMessage.cpp  TryAccessMessage.cpp
src/ucs/sessionmanager/: Session.cpp  SessionInfo.cpp  SessionQuery.cpp
src/ucs/utility/: utility.cpp  uuid.cpp
subprojects/: spdlog.wrap
test/: TestLibucs.cpp  meson.build
